joomla/joomla-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joomla-deployment
  namespace: joomla  
  labels:
    app: joomla
    type: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: joomla
      type: frontend
  template:
    metadata:
      labels:
        app: joomla
        type: frontend
    spec:
      containers:
        - name: joomla
          image: localhost:32000/myjoomla
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 443
              name: https-port
          volumeMounts:
            - name: joomla-vol
              mountPath: /var/www/html
      volumes:
        - name: joomla-vol
          persistentVolumeClaim:
            claimName: joomla-pvc
