joomla/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: joomla
  labels:
    app: joomla
    type: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joomla
      tier: mariadb
  template:
    metadata:
      labels:
        app: joomla
        tier: mariadb
        type: database
    spec:
      containers:
        - name: joomla
          image: localhost:32000/mymariadb
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - name: mariadb-vol
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-vol
          persistentVolumeClaim:
            claimName: mariadb-pvc
